<resources>
    <string name="app_name">AndroidStudio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart\nSnacks</string>
    <string name="nav_header_subtitle">Time to feed your online refrigerator!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_yourItems">Your Items </string>
    <string name="menu_pantry">Pantry</string>
    <string name="menu_necessities">Necessities</string>
    <string name="menu_recipes">Recipes</string>

    <string name="exp_date">Expiration Date</string>
    <string name="add_item">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="r_name">Recipe Name</string>
    <string name="r_des">Recipe Instructions:</string>
    <!-- String for Buttons-->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="pantry_demo">
            Beans      14      2021-12-17
            \n\nParsley     10      2021-12-17
            \n\nCream       4       2022-11-06
            \n\nThyme       3       2022-05-03
            \n\nBeer          12      2021-11-04
            \n\nMilk            2       2022-06-18</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>