<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_appleclip"
            android:title="@string/menu_yourItems" />
        <item
            android:id="@+id/nav_pantry"
            android:icon="@drawable/ic_fridge_icon_6"
            android:title="@string/menu_pantry" />
        <item
            android:id="@+id/nav_necessities"
            android:icon="@drawable/ic_baseline_check_box_24"
            android:title="@string/menu_necessities" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/menu_recipes" />
    </group>
</menu>