<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_items">

    <fragment
        android:id="@+id/nav_items"
        android:name="com.example.androidstudio.ItemFragment"
        android:label="@string/menu_yourItems"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/nav_pantry"
        android:name="com.example.androidstudio.ItemFragment"
        android:label="@string/menu_pantry"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/nav_necessities"
        android:name="com.example.androidstudio.ItemFragment"
        android:label="@string/menu_necessities"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.androidstudio.ItemFragment"
        android:label="fragment_item_list"
        tools:layout="@layout/fragment_item_list" />



</navigation>