<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupPantry"
    android:layout_width="350dip"
    android:layout_height="500dip"
    android:background="#A4D0A1">


    <TextView
        android:id="@+id/add_item"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="219dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_item" />

    <SearchView
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="35dp" />

    <TextView
        android:id="@+id/item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="280dp"
        android:text="@string/quantity" />

    <EditText
        android:id="@+id/input_qty"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="235dp"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="124dp"
        android:text="@string/exp_date" />

    <EditText
        android:id="@+id/input_exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="1/1/2022"
        android:ems="10"
        android:inputType="date"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="170dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="220dp"
        android:text="@string/cancel" />


</RelativeLayout>