<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupwindow"
    android:layout_width="350dip"
    android:layout_height="400dip"
    android:background="#A4D0A1">


    <TextView
        android:id="@+id/add_item"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="377dp"
        android:text="@string/add_item" />

    <EditText
        android:id="@+id/input_add_item"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="328dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="Apple"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="302dp"
        android:text="@string/quantity" />

    <EditText
        android:id="@+id/input_qty"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="252dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="1 or 3.5"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="303dp"
        android:text="@string/exp_date" />

    <EditText
        android:id="@+id/input_exp_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="252dp"
        android:ems="10"
        android:inputType="date"
        android:autofillHints="1/1/2022"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/nav_necessities"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="224dp"
        android:text="@string/menu_necessities" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="183dp" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="73dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="17dp"
        android:text="@string/cancel" />


</RelativeLayout>