<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupPantry"
    android:layout_width="350dip"
    android:layout_height="230dip"
    android:background="#A4D0A1">


    <TextView
        android:id="@+id/add_item"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="219dp"
        android:text="@string/add_item" />

    <SearchView
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="102dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="152dp"
        android:text="@string/cancel" />


</RelativeLayout>