<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popupwindow"
    android:layout_width="350dip"
    android:layout_height="240dip"
    android:background="#A4D0A1">


    <TextView
        android:id="@+id/add_item"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="219dp"
        android:text="@string/add_item" />

    <EditText
        android:id="@+id/input_add_item"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="11dp"
        android:autofillHints="Apple"
        android:ems="10"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/nav_necessities"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="225dp"
        android:text="@string/menu_necessities" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="220dp"
        android:buttonTint="@color/white" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="112dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/horizontal_spacing"
        android:layout_marginTop="162dp"
        android:text="@string/cancel" />



</RelativeLayout>